[gd_scene load_steps=10 format=3 uid="uid://d0qyk6v20uief"]

[ext_resource type="Script" uid="uid://de3mvpkilisin" path="res://generator.gd" id="1_ckrtr"]
[ext_resource type="Script" uid="uid://mehll26pvpq5" path="res://game.gd" id="1_f1l42"]
[ext_resource type="PackedScene" uid="uid://dl8ctpb4nx5b4" path="res://ChessScenes/pawn.tscn" id="3_871tv"]
[ext_resource type="PackedScene" uid="uid://cu208w2aj6qnh" path="res://ChessScenes/bishop.tscn" id="4_f2vpi"]
[ext_resource type="PackedScene" uid="uid://cl7imfd1umhvu" path="res://ChessScenes/rook.tscn" id="5_lwy4i"]
[ext_resource type="PackedScene" uid="uid://bgd6ldfcm8hie" path="res://ChessScenes/knight.tscn" id="6_ta68t"]
[ext_resource type="PackedScene" uid="uid://1sle88win6dm" path="res://ChessScenes/queen.tscn" id="7_7creb"]
[ext_resource type="PackedScene" uid="uid://yqfgmt234xui" path="res://ChessScenes/king.tscn" id="8_vvr6q"]
[ext_resource type="Script" uid="uid://1mo4agwa3fco" path="res://game_win.gd" id="9_ww6wk"]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_f1l42")
BoardPath = NodePath("Flow")

[node name="Flow" type="FlowContainer" parent="."]
layout_mode = 0
script = ExtResource("1_ckrtr")
Pawn = ExtResource("3_871tv")
Bishop = ExtResource("4_f2vpi")
Rook = ExtResource("5_lwy4i")
Knight = ExtResource("6_ta68t")
Queen = ExtResource("7_7creb")
King = ExtResource("8_vvr6q")

[node name="GameWin" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_ww6wk")

[node name="Promotion" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 531.0
offset_top = 130.0
offset_right = 731.0
offset_bottom = 330.0

[node name="Rook" type="Button" parent="Promotion"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 41.0
text = "Rook"

[node name="Bishop" type="Button" parent="Promotion"]
layout_mode = 0
offset_left = 68.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 41.0
text = "Bishop"

[node name="Knight" type="Button" parent="Promotion"]
layout_mode = 0
offset_left = 9.0
offset_top = 50.0
offset_right = 56.0
offset_bottom = 81.0
text = "Knight"

[node name="Queen" type="Button" parent="Promotion"]
layout_mode = 0
offset_left = 79.0
offset_top = 52.0
offset_right = 140.0
offset_bottom = 83.0
text = "Queen"

[connection signal="GameWin" from="." to="GameWin" method="_on_board_game_win"]
[connection signal="SendLocation" from="Flow" to="." method="_on_flow_send_location"]
[connection signal="pressed" from="Promotion/Rook" to="." method="FinalizePromotion" binds= ["Rook"]]
[connection signal="pressed" from="Promotion/Bishop" to="." method="FinalizePromotion" binds= ["Bishop"]]
[connection signal="pressed" from="Promotion/Knight" to="." method="FinalizePromotion" binds= ["Knight"]]
[connection signal="pressed" from="Promotion/Queen" to="." method="FinalizePromotion" binds= ["Queen"]]
